[tool.poetry]
authors = ["Toomore Chiang <toomore0929@gmail.com>"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: AWS CDK",
  "Topic :: Communications :: Email",
]
description = "Gather all the general services api in basic usage. This package is built for what we need in our side projects of open source."
homepage = 'https://github.com/toomore/gearkits'
keywords = ['API', 'AWS']
license = 'MIT'
name = "gearkits"
readme = 'README.md'
repository = 'https://github.com/toomore/gearkits'
version = "0.4.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
google-api-python-client = "^2.48.0"
boto3 = "^1.23.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.13.9"
pytest = "^7.1"
mypy = "^0.950"
types-requests = "^2.27.27"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "gearkits.gsuite"
ignore_missing_imports = true
