[tool.poetry]
authors = ["Toomore Chiang <toomore0929@gmail.com>"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: AWS CDK",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Traditional)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Topic :: Communications :: Chat",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Gather all the general services api in basic usage. This package is built for what we need in our side projects of open source."
homepage = 'https://github.com/toomore/gearkits'
keywords = ['API', 'AWS', 'AWS SES', 'gitlab', 'gsuite', 'ipinfo', 'mattermost', 'telegram']
license = 'MIT'
name = "gearkits"
readme = 'README.md'
repository = 'https://github.com/toomore/gearkits'
version = "0.6.0"
packages = [
    { include = "gearkits" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
google-api-python-client = "^2.48.0"
boto3 = "^1.23.5"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0"
pylint = "^2.13.9"
pytest = "^7.1"
mypy = "^1"
types-requests = "^2.27.27"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "gearkits.gsuite"
ignore_missing_imports = true

[tool.pylint."messages control"]
disable = ["E1101", "W0223"]

[tool.pylint.typecheck]
generated-members = ["googleapiclient.discovery.*"]
